style table section

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -114,7 +114,7 @@ h1 {
       &.section-itemsSection,
       .section-list:first-child,
       .section-number,
-      .section-table,
+      .section-table:first-child,
       .section-markdown,
       .section-duration,
       .section-grouped-list,
