--- a/src/components/Sections/SectionTable.less
+++ b/src/components/Sections/SectionTable.less
@@ -1,6 +1,7 @@
 .section-table {
   overflow-x: hidden;
   margin-top: 0 !important;
+  height: 100%;
 
   thead {
     th {
@@ -15,7 +16,6 @@
     border-left: 1px solid #DADBDB !important;
     border-bottom: none !important;
     border-right: none !important;
-    width: 80px;
 
     &:empty {
       height: 35px !important;
