--- a/src/components/Sections/ItemsSection.less
+++ b/src/components/Sections/ItemsSection.less
@@ -18,7 +18,7 @@
 
     &.card {
       .section-item-header {
-        padding-bottom: 9px;
+        padding-bottom: 6px;
         word-break: break-word;
       }
     }
@@ -31,12 +31,14 @@
       padding: 10px 0;
 
       .section-item-header {
-        width: 30%;
+        width: 31%;
         word-break: break-word;
+        margin-right: 8px;
       }
 
       &:last-child {
         border-bottom: none;
+        padding-bottom: 0;
       }
     }
 
