fix small issues

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -120,8 +120,9 @@ h1 {
       .section-item-value {
         .section-markdown,
         .section-table {
-          border: none;
-          padding: 0;
+          border: none !important;
+          padding: 0 !important;
+          margin-top: 0;
         }
       }
 
