--- a/src/components/Sections/SectionDuration.less
+++ b/src/components/Sections/SectionDuration.less
@@ -14,13 +14,16 @@
   }
   .duration-widget-container {
     display: flex;
+    flex-direction: column;
     flex:1;
     justify-content: center;
-    align-items: stretch;
-    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
 
     .duration-widget {
-      font-weight: bold;
+      display: flex;
+      flex-direction: row;
+      font-weight: 500;
       font-size: @font-size-header + 4;
       margin: 0;
 
@@ -38,6 +41,9 @@
 
       .wrapper-table {
         width: 100%;
+        text-align: center;
+        line-height: 0.5;
+
         .time-unit {
           color: @font-color-base;
           font-weight: bold;
