wysiwyg pie chart legend layout

--- a/src/components/Sections/SectionChart/ChartLegend.less
+++ b/src/components/Sections/SectionChart/ChartLegend.less
@@ -25,7 +25,7 @@
         overflow: hidden;
       }
       .recharts-legend-item-value {
-        flex: unset;
+        flex: 1;
       }
   }
     .recharts-legend-icon-container {
