inline-blockquote functionality

--- a/src/components/Sections/SectionMarkdown.less
+++ b/src/components/Sections/SectionMarkdown.less
@@ -22,6 +22,12 @@
       color: #777;
       border-left: 4px solid @brand-color;
     }
+    &.inline-blockquote{
+      color: @markdown-inline-blockquote-color;
+      background-color: @markdown-inline-blockquote-bg-color;
+      border-radius: 3px;
+      padding: 0;
+    }
   }
 
   .preplacer {
