--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -54,3 +54,6 @@
 @color-description:                     rgba(64, 65, 66, 0.7);
 
 @icon-status-noresults-24-r: data-uri('@{images-folder}/status-noresults-24-r.svg') no-repeat center;
+
+@markdown-inline-blockquote-color: @color-text;
+@markdown-inline-blockquote-bg-color: rgba(64, 65, 66, 0.08);
