--- a/src/components/Sections/SectionMarkdown.less
+++ b/src/components/Sections/SectionMarkdown.less
@@ -13,6 +13,7 @@
 
   img {
     max-width: 100%;
+    page-break-inside: avoid;
   }
 
   .markdown {
@@ -36,6 +37,7 @@
     margin-block-end: 1.1em;
     margin-inline-start: 0;
     margin-inline-end: 0;
+    page-break-inside: avoid;
 
     &:last-child {
       margin-bottom: 0 !important;
