bordered and not bordered

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -21,6 +21,11 @@ h1 {
   text-transform: capitalize;
 }
 
+.not-bordered {
+  border: none !important;
+  padding: 0 !important;
+}
+
 .global-section {
   display: flex;
   flex-direction: column;
