--- a/src/components/Sections/ItemsSection.less
+++ b/src/components/Sections/ItemsSection.less
@@ -16,6 +16,11 @@
     height: auto;
     min-height: 50px;
 
+    &.bordered {
+      border: 1px solid #DADBDB;
+      padding: 10px 12px;
+    }
+
     &.card {
       .section-item-header {
         padding-bottom: 6px;
