fix items section if-else by item type

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -26,6 +26,12 @@ h1 {
   padding: 0 !important;
 }
 
+.bordered {
+  border: 1px solid #DADBDB !important;
+  padding: 10px 12px !important;
+}
+
+
 .global-section {
   display: flex;
   flex-direction: column;
@@ -123,7 +129,6 @@ h1 {
       }
 
       .section-item-value {
-        .section-markdown,
         .section-table {
           border: none !important;
           padding: 0 !important;
