encapsulate border not-bordered at less

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -21,16 +21,17 @@ h1 {
   text-transform: capitalize;
 }
 
-.not-bordered {
-  border: none !important;
-  padding: 0 !important;
-}
+.section-layout, .section-markdown {
+  &.not-bordered {
+    border: none !important;
+    padding: 0 !important;
+  }
 
-.bordered {
-  border: 1px solid #DADBDB !important;
-  padding: 10px 12px !important;
+  &.bordered {
+    border: 1px solid #DADBDB !important;
+    padding: 10px 12px !important;
+  }
 }
-
 
 .global-section {
   display: flex;
