--- a/src/components/Sections/ItemsSection.less
+++ b/src/components/Sections/ItemsSection.less
@@ -16,6 +16,10 @@
     height: auto;
     min-height: 50px;
 
+    .section-item-header {
+      text-transform: capitalize;
+    }
+
     &.card {
       .section-item-header {
         padding-bottom: 6px;
