--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -21,16 +21,14 @@ h1 {
   text-transform: capitalize;
 }
 
-.section-layout, .section-markdown {
-  &.not-bordered {
-    border: none !important;
-    padding: 0 !important;
-  }
+.not-bordered {
+  border: none !important;
+  padding: 0 !important;
+}
 
-  &.bordered {
-    border: 1px solid #DADBDB !important;
-    padding: 10px 12px !important;
-  }
+.bordered {
+  border: 1px solid #DADBDB !important;
+  padding: 10px 12px !important;
 }
 
 .global-section {
@@ -130,6 +128,7 @@ h1 {
       }
 
       .section-item-value {
+        .section-markdown,
         .section-table {
           border: none !important;
           padding: 0 !important;
