CRTX-64873: Panels are overlapping on each other

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -117,6 +117,12 @@ h1 {
         }
       }
 
+      &.section-itemsSection {
+        > div:first-child {
+          display: inline-block;
+        }
+      }
+
       .section-item-value {
         .section-markdown,
         .section-table {
