CRTX-98811: Reports are not correctly formatted to PDF

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -27,9 +27,16 @@ h1 {
   height: 100%;
 
   .global-section-row {
-    display: flex;
     flex: 1;
-    flex-direction: row;
+
+    &.multi-column {
+      display: flex;
+      flex-direction: row;
+
+      .subsection-wrapper {
+        flex: 1;
+      }
+    }
 
     &.no-break-inside {
       break-inside: avoid;
@@ -37,7 +44,6 @@ h1 {
     }
 
     .subsection-wrapper {
-      flex: 1;
       width: 100%;
 
       .section-text {
