Revert "CRTX-96742: Broken tables in the PDF report Investigation summary"

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -67,26 +67,6 @@ h1 {
     }
   }
 
-  .section-table, .section-markdown {
-    table {
-      break-inside: auto;
-    }
-
-    tr {
-      break-inside: avoid;
-      break-after: auto;
-    }
-
-    thead {
-      display: table-header-group;
-      break-inside: avoid;
-    }
-
-    tfoot {
-      display: table-header-group;
-    }
-  }
-
   .report-section {
     display: table-cell;
 
@@ -182,6 +162,27 @@ h1 {
 
       &.slim {
         height: auto !important;
+      }
+
+      &.section-table, &.section-markdown {
+
+        table {
+          break-inside: auto;
+        }
+
+        tr {
+          break-inside: avoid;
+          break-after: auto;
+        }
+
+        thead {
+          display: table-header-group;
+          break-inside: avoid;
+        }
+
+        tfoot {
+          display: table-header-group;
+        }
       }
 
       .section-title {
