--- a/src/css/Index.css
+++ b/src/css/Index.css
@@ -1,3 +1,4 @@
 @import "./variables.less";
+@import "./colors.less";
 @import "../../node_modules/semantic-ui/dist/semantic.min.css";
 @import "../../assets/fonts/demisto-icons/css/demisto.css";
